--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,11 @@ dependencies {
     kapt 'com.google.dagger:dagger-android-processor:2.44.1'
     kapt 'com.google.dagger:dagger-compiler:2.44.1'
 
+    //Koin
+    def koin_version = "3.2.2"
+    implementation "io.insert-koin:koin-core:$koin_version"
+    implementation "io.insert-koin:koin-android:$koin_version"
+    implementation "io.insert-koin:koin-android-compat:$koin_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
